# clarence

./: .gitignore  README.md  extra_bashrc.bash  extra_build.bash  extra_build.bash.new  extra_run.bash  pip_requirements.txt
config/: asound.conf
doc/: hardware.md
docker/: build.sh  run.sh
docker/image/: Dockerfile  bashrc  ros_entrypoint.sh
src/alsa_gain/: package.xml  setup.cfg  setup.py
src/alsa_gain/alsa_gain/: alsa_gain.py  mixer_thread.py
src/alsa_gain_msgs/: CMakeLists.txt  package.xml
src/alsa_gain_msgs/msg/: AlsaGain.msg
src/clarence/: package.xml  setup.cfg  setup.py
src/clarence/clarence/: clarence.py
src/clarence/launch/: all.yaml
src/clarence_web/: package.xml  setup.cfg  setup.py
src/clarence_web/clarence_web/: web_server.py
src/clarence_web/site/: index.html  script.js
src/gpio_leds/gpio_leds/: package.xml  setup.cfg
src/gpio_leds/gpio_leds/gpio_leds/: led_node.py
src/gpio_leds/gpio_leds_msgs/: CMakeLists.txt  package.xml
src/gpio_leds/gpio_leds_msgs/msg/: Led.msg
src/pca9685_servos/pca9685_servos_msgs/: CMakeLists.txt  package.xml
src/pca9685_servos/pca9685_servos_msgs/msg/: Servo.msg  ServoCalibration.msg
src/pca9685_servos/pca9685_servos_node/: package.xml  setup.cfg  setup.py
src/pca9685_servos/pca9685_servos_node/pca9685_servos_node/: pca9685_servos_node.py
src/waveshare_3s_ups/: setup.cfg  setup.py
src/waveshare_3s_ups/waveshare_3s_ups/: waveshare_3s_ups.py
util/: INA219.py  LED.py  PCA9685.py  alsa2_thread.py  alsa3_thread.py  alsa4_thread.py  alsa_thread.py  play.py  test.py  threadpipe.py  volume.py
