<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pca9685_servos_node</name>
  <version>0.0.1</version>
  <description>Node for PCA9685-based servo driver</description>
  <maintainer email="kent@caspia.com">R. Kent James</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>pca9685_servos_msgs</exec_depend>
  <exec_depend>python-smbus</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_xmllint</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
